# Conways-Game-Of-Life

./: CMakeLists.txt  ConsoleUtils.cpp  ConsoleUtils.h  ConwaysGameOfLife.cpp  ConwaysGameOfLife.h  Conways_Game_Of_Life.bat  Conways_Game_Of_Life.sln  Conways_Game_Of_Life.vcxproj  Conways_Game_Of_Life.vcxproj.filters  ExperimentManager.cpp  ExperimentManager.h  GameConfig.h  Grid.cpp  Grid.h  PatternDetector.cpp  PatternDetector.h  PauseController.h  README.md  StringUtils.cpp  StringUtils.h  main.cpp
Assets/Saves/: beehive.txt  blinker.txt  block.txt  glider.txt  toad.txt
